# PCA-MNIST

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mnist.cpp  mnist.h  pca_mnist.c  pca_mnist.cpp
